# Biomesh

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  biomesh.sh  makefile
CLEANER/: main.cc  makefile
CREATES_PDB/: makefile
CREATES_PDB/output/: pdb
CREATES_PDB/src/: main.cc
CREATES_PDB/src/capside/: capside.h
CREATES_PDB/src/file/: file.h
CREATES_PDB/src/interpolator/: interpolator.h
CREATES_PDB/src/mesh/: mesh.h
CREATES_PDB/src/octree/: octree_binary.h  octree_binary_cell.h  octree_driver.h
MESHER/: makefile
MESHER/src/: main.cc
MESHER/src/boundary/: boundary.h
MESHER/src/capside/: capside.h
MESHER/src/geometry/: geometry.h
MESHER/src/mesh/: mesh.h
MESHER/src/mesher/: mesher.h
MESHER/src/octree/: octree_binary.h  octree_binary_cell.h  octree_driver.h
ROTATOR/: main.cc  makefile
SOLVER/: To do.txt
SOLVER/gid/problemtypes/Coloring.gid/: Coloring
SOLVER/gid/problemtypes/ElectricPotential.gid/: ElectricPotential
SOLVER/gid/problemtypes/Heat.gid/: Heat
SOLVER/gid/problemtypes/Partitioning.gid/: Partitioning
SOLVER/source/Basic/: Random.h
SOLVER/source/Container/: KDTreeB - Copy.h  KDTreeB.h
SOLVER/source/GiDProblemTypes/Solid/: Solid.h
SOLVER/tools/: Diff  EqnSolver  EqnSolverExample_cpp  EqnSolverExample_for  FEMSolver  FEMSolverExample_cpp  FEMSolverExample_for  MatSolver
config/: default.conf
docs/: EmptyVoxelMeshGeneration.md  MoleculeFilter.md  VoxelizationMeshGeneration.md  biomesh_cli_contract.md  ticket8_validation.md  unified_executable_plan.md
examples/: biomesh.cpp  empty_voxel_to_gid.cpp  empty_voxel_to_gid_wrapper.cpp  filter_demo.cpp  filter_workflow_example.cpp  main.cpp  occupied_voxel_to_gid.cpp  occupied_voxel_to_gid_wrapper.cpp  voxel_demo.cpp
include/biomesh/: Atom.hpp  AtomBuilder.hpp  AtomicSpec.hpp  BioMesh.hpp  BoundingBox.hpp  EmptyVoxelMeshGenerator.hpp  GiDExporter.hpp  HexMesh.hpp  MeshExporter.hpp  MoleculeFilter.hpp  PDBParser.hpp  ResidueClassifier.hpp  STLExporter.hpp  VoxelGrid.hpp  VoxelMeshGenerator.hpp
src/: Atom.cpp  AtomBuilder.cpp  AtomicSpec.cpp  BioMesh.cpp  BoundingBox.cpp  EmptyVoxelMeshGenerator.cpp  GiDExporter.cpp  MeshExporter.cpp  MoleculeFilter.cpp  PDBParser.cpp  ResidueClassifier.cpp  STLExporter.cpp  VoxelGrid.cpp  VoxelMeshGenerator.cpp
tests/: smoke_no_deps.cpp  test_biomesh.cpp  test_exporters.cpp  test_molecule_filter.cpp
